--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,11 @@ jobs:
 
   test:
 
-    runs-on: ubuntu-latest
+    - uses: actions/download-artifact@master
+      with:
+        name: webpack artifacts
+        path: public
+    - name: npm install, and test
 
     strategy:
       matrix:
