--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
