--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,10 @@ on: [push]
 
 jobs:
   build:
-
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
     runs-on: ubuntu-latest
     needs: build
     steps:
